# ai_stock

./: .env.example  .gitignore  CODEX.md  MANIFEST.json  README.md  pyproject.toml
app/: __init__.py  streamlit_app.py
docs/: 00_SOURCE_REVIEW.md  01_PRODUCT_REQUIREMENTS.md  02_TOSS_OPEN_API_REFERENCE.md  03_DEVELOPMENT_ARCHITECTURE.md  04_PROJECT_STRUCTURE.md  05_CONFIG_AND_SECRETS.md  06_TOSS_CLIENT_DESIGN.md  07_MARKET_DATA_PIPELINE.md  08_AI_RECOMMENDATION_ENGINE.md  09_PAPER_TRADING_ENGINE.md  10_TEST_EXECUTION_AND_LOGGING.md  11_ORDER_AND_SAFETY_POLICY.md  12_WBS.md  13_CODEX_TASK_PROMPTS.md  14_RISK_COMPLIANCE_AND_OPERATIONS.md  15_OBSERVABILITY_AND_REPORTS.md  16_FUTURE_ROADMAP.md  17_STAGE_GATE_AND_USER_APPROVAL.md  18_MICRO_STAGE_DEVELOPMENT_PROCESS.md  19_DETAILED_MICRO_WBS.md  20_CODEX_STOP_AND_CONFIRMATION_RULES.md  21_TECH_STACK_AND_API_SCOPE.md  22_PROJECT_SETUP_AND_USAGE_GUIDE.md  23_LOCAL_ONLY_EXECUTION_POLICY.md  24_FRONTEND_FRAMEWORK_DECISION.md  25_CODEX_MULTI_SESSION_ROLE_PROCESS.md  26_GITHUB_REPOSITORY_AND_COMMIT_POLICY.md  27_ROLE_BASED_GIT_WORKFLOW.md  28_READONLY_DASHBOARD_RUNBOOK.md  29_AI_STOCK_NEXT_ROADMAP_MS09_MS20.md
references/: data_model_dictionary.md  endpoint_matrix.md  error_and_rate_limit_notes.md  source_links.md
reports/: MS-00.02_project_skeleton_report.md  MS-00.03_local_config_secrets_report.md  MS-00.04_test_log_report_baseline.md  MS-01.01_toss_client_foundation_report.md  MS-01.02_auth_token_mock_flow_report.md  MS-01.03_auth_request_context_report.md  MS-02.01_stock_info_client_mock_report.md  (+88 more)
roles/: 00_ROLE_INDEX.md  (+9 more)
(+197 files in other folders)
